Fix a CSS bug on the side bar.
Stop the sponsor images from overflowing the well.  IE and Firefox both
suffer this bug, WebKit just works.

--- a/DDDEastAnglia/Content/Site.css
+++ b/DDDEastAnglia/Content/Site.css
@@ -85,6 +85,7 @@ dd {
 #sponsors .sponsor {
     display: inline-block;
     overflow: hidden;
+    max-width: 210px;
 }
 
 .sponsor a img {
